# csvflat

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  csvflat  csvflat.c
.github/workflows/: c-cpp.yml
man/: csvflat.1
src/: csvflat.c
